--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,11 +17,15 @@ Imports:
 LinkingTo: 
     BH,
     qspray,
-    ratioOfQsprays
+    ratioOfQsprays,
     Rcpp,
-    RcppArmadillo
+    RcppArmadillo,
     RcppCGAL
 Remotes: stla/qspray, stla/ratioOfQsprays
 Encoding: UTF-8
 RoxygenNote: 7.3.1
 SystemRequirements: C++17, gmp, mpfr
+Collate: 
+    'RcppExports.R'
+    'internal.R'
+    'symbolicQspray.R'
