--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,5 +28,6 @@ RoxygenNote: 7.3.1
 SystemRequirements: C++17, gmp, mpfr
 Collate: 
     'RcppExports.R'
+    'creation.R'
     'internal.R'
     'symbolicQspray.R'
