--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(Qlone)
 export(rSymbolicQspray)
+export(showSymbolicQspray)
+export(showSymbolicQsprayCanonical)
 exportMethods(as.symbolicQspray)
 importFrom(Rcpp,evalCpp)
 importFrom(gmp,as.bigq)
@@ -13,5 +15,6 @@ importFrom(qspray,orderedQspray)
 importFrom(qspray,rQspray)
 importFrom(ratioOfQsprays,as.ratioOfQsprays)
 importFrom(ratioOfQsprays,rRatioOfQsprays)
+importFrom(ratioOfQsprays,showRatioOfQspraysCanonical)
 importFrom(utils,capture.output)
 useDynLib(symbolicQspray, .registration=TRUE)
