--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(evalSymbolicQspray)
 export(rSymbolicQspray)
 export(showSymbolicQspray)
 export(showSymbolicQsprayCanonical)
+export(withAttributes)
 exportMethods(as.symbolicQspray)
 importFrom(Rcpp,evalCpp)
 importFrom(gmp,as.bigq)
