--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: symbolicQspray
-Title: What the Package Does (One Line, Title Case)
+Title: Multivariate Polynomials with Polynomials Coefficients
 Version: 0.0.0.9000
 Authors@R: 
     person("Stéphane", "Laurent", , "laurent_step@outlook.fr", role = c("aut", "cre"))
