export symbolicQspray_from_list

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(evalSymbolicQspray)
 export(rSymbolicQspray)
 export(showSymbolicQspray)
 export(showSymbolicQsprayCanonical)
+export(symbolicQspray_from_list)
 export(withAttributes)
 exportMethods(as.symbolicQspray)
 importFrom(Rcpp,evalCpp)
@@ -18,9 +19,11 @@ importFrom(methods,show)
 importFrom(qspray,evalQspray)
 importFrom(qspray,orderedQspray)
 importFrom(qspray,rQspray)
+importFrom(qspray,showMonomialCanonical)
 importFrom(ratioOfQsprays,as.ratioOfQsprays)
 importFrom(ratioOfQsprays,evalRatioOfQsprays)
 importFrom(ratioOfQsprays,rRatioOfQsprays)
+importFrom(ratioOfQsprays,ratioOfQsprays_from_list)
 importFrom(ratioOfQsprays,showRatioOfQspraysCanonical)
 importFrom(utils,capture.output)
 useDynLib(symbolicQspray, .registration=TRUE)
