--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ importFrom(Rcpp,evalCpp)
 importFrom(gmp,as.bigq)
 importFrom(gmp,c_bigq)
 importFrom(methods,new)
+importFrom(methods,setAs)
 importFrom(methods,setClass)
 importFrom(methods,setMethod)
 importFrom(methods,show)
