showCoefficient method, for usage in prettySymmetricQspray

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(showSymbolicQsprayCanonical)
 export(symbolicQspray_from_list)
 export(withAttributes)
 exportMethods(as.symbolicQspray)
+exportMethods(showCoefficient)
 importFrom(Rcpp,evalCpp)
 importFrom(gmp,as.bigq)
 importFrom(gmp,c_bigq)
@@ -20,6 +21,7 @@ importFrom(methods,show)
 importFrom(qspray,evalQspray)
 importFrom(qspray,orderedQspray)
 importFrom(qspray,rQspray)
+importFrom(qspray,showCoefficient)
 importFrom(qspray,showMonomialCanonical)
 importFrom(ratioOfQsprays,as.ratioOfQsprays)
 importFrom(ratioOfQsprays,evalRatioOfQsprays)
