--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,5 +28,6 @@ importFrom(ratioOfQsprays,evalRatioOfQsprays)
 importFrom(ratioOfQsprays,rRatioOfQsprays)
 importFrom(ratioOfQsprays,ratioOfQsprays_from_list)
 importFrom(ratioOfQsprays,showRatioOfQspraysCanonical)
+importFrom(ratioOfQsprays,showRatioOfQspraysUnivariate)
 importFrom(utils,capture.output)
 useDynLib(symbolicQspray, .registration=TRUE)
