--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,14 @@ export(showSymbolicQsprayCanonical)
 export(symbolicQspray_from_list)
 export(withAttributes)
 exportMethods(as.symbolicQspray)
+exportMethods(getCoefficient)
+exportMethods(getConstantTerm)
+exportMethods(isConstant)
+exportMethods(isQone)
+exportMethods(isQzero)
+exportMethods(isUnivariate)
+exportMethods(numberOfTerms)
+exportMethods(numberOfVariables)
 exportMethods(showCoefficient)
 importFrom(Rcpp,evalCpp)
 importFrom(gmp,as.bigq)
@@ -19,6 +27,14 @@ importFrom(methods,setClass)
 importFrom(methods,setMethod)
 importFrom(methods,show)
 importFrom(qspray,evalQspray)
+importFrom(qspray,getCoefficient)
+importFrom(qspray,getConstantTerm)
+importFrom(qspray,isConstant)
+importFrom(qspray,isQone)
+importFrom(qspray,isQzero)
+importFrom(qspray,isUnivariate)
+importFrom(qspray,numberOfTerms)
+importFrom(qspray,numberOfVariables)
 importFrom(qspray,orderedQspray)
 importFrom(qspray,rQspray)
 importFrom(qspray,showCoefficient)
