--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,9 @@ export(Qlone)
 export(evalSymbolicQspray)
 export(rSymbolicQspray)
 export(showSymbolicQspray)
-export(showSymbolicQsprayCanonical)
+export(showSymbolicQsprayX1X2X3)
+export(showSymbolicQsprayXYZ)
 export(symbolicQspray_from_list)
-export(withAttributes)
 exportMethods(as.symbolicQspray)
 exportMethods(getCoefficient)
 exportMethods(getConstantTerm)
@@ -38,12 +38,12 @@ importFrom(qspray,numberOfVariables)
 importFrom(qspray,orderedQspray)
 importFrom(qspray,rQspray)
 importFrom(qspray,showCoefficient)
-importFrom(qspray,showMonomialCanonical)
+importFrom(qspray,showMonomialX1X2X3)
+importFrom(qspray,showMonomialXYZ)
 importFrom(ratioOfQsprays,as.ratioOfQsprays)
 importFrom(ratioOfQsprays,evalRatioOfQsprays)
 importFrom(ratioOfQsprays,rRatioOfQsprays)
 importFrom(ratioOfQsprays,ratioOfQsprays_from_list)
-importFrom(ratioOfQsprays,showRatioOfQspraysCanonical)
-importFrom(ratioOfQsprays,showRatioOfQspraysUnivariate)
+importFrom(ratioOfQsprays,showRatioOfQspraysX1X2X3)
 importFrom(utils,capture.output)
 useDynLib(symbolicQspray, .registration=TRUE)
