--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export("showSymbolicQsprayOption<-")
 export(Qlone)
+export(Qone)
+export(Qzero)
 export(evalSymbolicQspray)
 export(rSymbolicQspray)
 export(showSymbolicQspray)
