compactSymmetricQspray method with missing check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(showSymbolicQsprayX1X2X3)
 export(showSymbolicQsprayXYZ)
 export(symbolicQspray_from_list)
 exportMethods(as.symbolicQspray)
+exportMethods(compactSymmetricQspray)
 exportMethods(getCoefficient)
 exportMethods(getConstantTerm)
 exportMethods(isConstant)
@@ -19,7 +20,6 @@ exportMethods(isQzero)
 exportMethods(isUnivariate)
 exportMethods(numberOfTerms)
 exportMethods(numberOfVariables)
-exportMethods(showCoefficient)
 importFrom(Rcpp,evalCpp)
 importFrom(gmp,as.bigq)
 importFrom(gmp,c_bigq)
@@ -28,6 +28,8 @@ importFrom(methods,setAs)
 importFrom(methods,setClass)
 importFrom(methods,setMethod)
 importFrom(methods,show)
+importFrom(qspray,MSPcombination)
+importFrom(qspray,compactSymmetricQspray)
 importFrom(qspray,getCoefficient)
 importFrom(qspray,getConstantTerm)
 importFrom(qspray,isConstant)
@@ -38,7 +40,6 @@ importFrom(qspray,numberOfTerms)
 importFrom(qspray,numberOfVariables)
 importFrom(qspray,orderedQspray)
 importFrom(qspray,rQspray)
-importFrom(qspray,showCoefficient)
 importFrom(qspray,showMonomialX1X2X3)
 importFrom(qspray,showMonomialXYZ)
 importFrom(ratioOfQsprays,as.ratioOfQsprays)
@@ -47,4 +48,5 @@ importFrom(ratioOfQsprays,rRatioOfQsprays)
 importFrom(ratioOfQsprays,ratioOfQsprays_from_list)
 importFrom(ratioOfQsprays,showRatioOfQspraysX1X2X3)
 importFrom(utils,capture.output)
+importFrom(utils,head)
 useDynLib(symbolicQspray, .registration=TRUE)
