--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,8 @@ exportMethods(isQzero)
 exportMethods(isUnivariate)
 exportMethods(numberOfTerms)
 exportMethods(numberOfVariables)
+exportMethods(permuteVariables)
+exportMethods(swapVariables)
 importFrom(Rcpp,evalCpp)
 importFrom(gmp,as.bigq)
 importFrom(gmp,c_bigq)
@@ -39,9 +41,11 @@ importFrom(qspray,isUnivariate)
 importFrom(qspray,numberOfTerms)
 importFrom(qspray,numberOfVariables)
 importFrom(qspray,orderedQspray)
+importFrom(qspray,permuteVariables)
 importFrom(qspray,rQspray)
 importFrom(qspray,showMonomialX1X2X3)
 importFrom(qspray,showMonomialXYZ)
+importFrom(qspray,swapVariables)
 importFrom(ratioOfQsprays,as.ratioOfQsprays)
 importFrom(ratioOfQsprays,evalRatioOfQsprays)
 importFrom(ratioOfQsprays,rRatioOfQsprays)
