--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,9 +48,11 @@ importFrom(qspray,showMonomialXYZ)
 importFrom(qspray,swapVariables)
 importFrom(ratioOfQsprays,as.ratioOfQsprays)
 importFrom(ratioOfQsprays,evalRatioOfQsprays)
+importFrom(ratioOfQsprays,isUnivariate)
 importFrom(ratioOfQsprays,rRatioOfQsprays)
 importFrom(ratioOfQsprays,ratioOfQsprays_from_list)
 importFrom(ratioOfQsprays,showRatioOfQspraysX1X2X3)
+importFrom(ratioOfQsprays,showRatioOfQspraysXYZ)
 importFrom(utils,capture.output)
 importFrom(utils,head)
 useDynLib(symbolicQspray, .registration=TRUE)
