pass show options in evalSymbolicQspray

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ importFrom(qspray,rQspray)
 importFrom(qspray,showMonomialX1X2X3)
 importFrom(qspray,showMonomialXYZ)
 importFrom(qspray,swapVariables)
+importFrom(ratioOfQsprays,"showRatioOfQspraysOption<-")
 importFrom(ratioOfQsprays,as.ratioOfQsprays)
 importFrom(ratioOfQsprays,evalRatioOfQsprays)
 importFrom(ratioOfQsprays,isUnivariate)
