--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,8 +30,10 @@ importFrom(methods,setAs)
 importFrom(methods,setClass)
 importFrom(methods,setMethod)
 importFrom(methods,show)
+importFrom(qspray,"showQsprayOption<-")
 importFrom(qspray,MSPcombination)
 importFrom(qspray,compactSymmetricQspray)
+importFrom(qspray,evalQspray)
 importFrom(qspray,getCoefficient)
 importFrom(qspray,getConstantTerm)
 importFrom(qspray,isConstant)
@@ -50,6 +52,7 @@ importFrom(ratioOfQsprays,"showRatioOfQspraysOption<-")
 importFrom(ratioOfQsprays,as.ratioOfQsprays)
 importFrom(ratioOfQsprays,evalRatioOfQsprays)
 importFrom(ratioOfQsprays,isUnivariate)
+importFrom(ratioOfQsprays,numberOfVariables)
 importFrom(ratioOfQsprays,rRatioOfQsprays)
 importFrom(ratioOfQsprays,ratioOfQsprays_from_list)
 importFrom(ratioOfQsprays,showRatioOfQspraysX1X2X3)
