--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,12 @@ Description: Introduces the 'symbolicQspray' objects. Such an object
     defines a multivariate polynomial whose coefficients are fractions of
     multivariate polynomials with rational coefficients. The package
     allows arithmetic on such polynomials. It is based on the 'qspray' and 
-    'ratioOfQsprays' packages. Some functions from the 'qspray' package are 
-    applicable to 'symbolicQspray' objects.
+    'ratioOfQsprays' packages. Some functions for 'qspray' polynomials have
+    their counterpart for 'symbolicQspray' polynomials. A 'symbolicQspray' 
+    polynomial should not be seen as a polynomial on the field of fractions 
+    of rational polynomials, but should rather be seen as a polynomial with 
+    rational coefficients depending on some parameters, with a dependence 
+    given by fractions of rational polynomials.
 License: GPL-3
 URL: https://github.com/stla/symbolicQspray
 BugReports: https://github.com/stla/symbolicQspray/issues
@@ -35,7 +39,7 @@ Remotes:
 Config/testthat/edition: 3
 Encoding: UTF-8
 RoxygenNote: 7.3.1
-SystemRequirements: C++17, gmp, mpfr
+SystemRequirements: C++17, gmp
 Collate: 
     'RcppExports.R'
     'creation.R'
