--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,6 +41,7 @@ Encoding: UTF-8
 RoxygenNote: 7.3.1
 SystemRequirements: C++17, gmp
 Collate: 
+    'JacobiPolynomial.R'
     'RcppExports.R'
     'creation.R'
     'evaluation.R'
