--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(JacobiPolynomial)
 export(Qlone)
 export(Qone)
 export(Qzero)
+export(dSymbolicQspray)
+export(derivSymbolicQspray)
 export(evalSymbolicQspray)
 export(rSymbolicQspray)
 export(showSymbolicQspray)
