--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(showSymbolicQsprayX1X2X3)
 export(showSymbolicQsprayXYZ)
 export(symbolicQspray_from_list)
 exportMethods(as.symbolicQspray)
+exportMethods(changeVariables)
 exportMethods(compactSymmetricQspray)
 exportMethods(getCoefficient)
 exportMethods(getConstantTerm)
@@ -35,6 +36,7 @@ importFrom(methods,setMethod)
 importFrom(methods,show)
 importFrom(qspray,"showQsprayOption<-")
 importFrom(qspray,MSPcombination)
+importFrom(qspray,changeVariables)
 importFrom(qspray,compactSymmetricQspray)
 importFrom(qspray,evalQspray)
 importFrom(qspray,getCoefficient)
