--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,11 @@ export(JacobiPolynomial)
 export(Qlone)
 export(Qone)
 export(Qzero)
+export(changeParameters)
 export(dSymbolicQspray)
 export(derivSymbolicQspray)
 export(evalSymbolicQspray)
+export(numberOfParameters)
 export(rSymbolicQspray)
 export(showSymbolicQspray)
 export(showSymbolicQsprayX1X2X3)
@@ -57,7 +59,6 @@ importFrom(qspray,swapVariables)
 importFrom(ratioOfQsprays,"showRatioOfQspraysOption<-")
 importFrom(ratioOfQsprays,as.ratioOfQsprays)
 importFrom(ratioOfQsprays,evalRatioOfQsprays)
-importFrom(ratioOfQsprays,isUnivariate)
 importFrom(ratioOfQsprays,numberOfVariables)
 importFrom(ratioOfQsprays,rRatioOfQsprays)
 importFrom(ratioOfQsprays,ratioOfQsprays_from_list)
