--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(changeParameters)
 export(dSymbolicQspray)
 export(derivSymbolicQspray)
 export(evalSymbolicQspray)
+export(hasPolynomialCoefficients)
 export(numberOfParameters)
 export(rSymbolicQspray)
 export(showSymbolicQspray)
@@ -59,6 +60,7 @@ importFrom(qspray,swapVariables)
 importFrom(ratioOfQsprays,"showRatioOfQspraysOption<-")
 importFrom(ratioOfQsprays,as.ratioOfQsprays)
 importFrom(ratioOfQsprays,evalRatioOfQsprays)
+importFrom(ratioOfQsprays,isPolynomial)
 importFrom(ratioOfQsprays,numberOfVariables)
 importFrom(ratioOfQsprays,rRatioOfQsprays)
 importFrom(ratioOfQsprays,ratioOfQsprays_from_list)
