--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(rSymbolicQspray)
 export(showSymbolicQspray)
 export(showSymbolicQsprayX1X2X3)
 export(showSymbolicQsprayXYZ)
+export(substituteParameters)
+export(substituteVariables)
 export(symbolicQspray_from_list)
 exportMethods(as.symbolicQspray)
 exportMethods(changeVariables)
