--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(hasPolynomialCoefficients)
 export(numberOfParameters)
 export(rSymbolicQspray)
 export(showSymbolicQspray)
+export(showSymbolicQsprayABCXYZ)
 export(showSymbolicQsprayX1X2X3)
 export(showSymbolicQsprayXYZ)
 export(substituteParameters)
