--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ License: GPL-3
 URL: https://github.com/stla/symbolicQspray
 BugReports: https://github.com/stla/symbolicQspray/issues
 Depends:
-    qspray,
+    qspray (>= 3.0.0),
     ratioOfQsprays
 Imports: 
     gmp,
