--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,7 @@ Remotes:
 Config/testthat/edition: 3
 Encoding: UTF-8
 RoxygenNote: 7.3.1
-SystemRequirements: C++17, gmp
+SystemRequirements: C++17, gmp, mpfr
 Collate: 
     'JacobiPolynomial.R'
     'RcppExports.R'
