--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Stéphane", "Laurent", , "laurent_step@outlook.fr", role = c("aut", "cre"))
 Description: Introduces the 'symbolicQspray' objects. Such an object
-    defines a multivariate polynomial whose coefficients are fractions of
+    represents a multivariate polynomial whose coefficients are fractions of
     multivariate polynomials with rational coefficients. The package
     allows arithmetic on such polynomials. It is based on the 'qspray' and 
     'ratioOfQsprays' packages. Some functions for 'qspray' polynomials have
@@ -33,8 +33,6 @@ LinkingTo:
     Rcpp,
     RcppArmadillo,
     RcppCGAL
-Remotes: 
-    stla/ratioOfQsprays
 Config/testthat/edition: 3
 Encoding: UTF-8
 RoxygenNote: 7.3.1
