--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ importFrom(gmp,c_bigq)
 importFrom(methods,new)
 importFrom(methods,setAs)
 importFrom(methods,setClass)
+importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
 importFrom(methods,show)
 importFrom(qspray,"showQsprayOption<-")
@@ -69,6 +70,5 @@ importFrom(ratioOfQsprays,rRatioOfQsprays)
 importFrom(ratioOfQsprays,ratioOfQsprays_from_list)
 importFrom(ratioOfQsprays,showRatioOfQspraysX1X2X3)
 importFrom(ratioOfQsprays,showRatioOfQspraysXYZ)
-importFrom(utils,capture.output)
 importFrom(utils,head)
 useDynLib(symbolicQspray, .registration=TRUE)
