--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: symbolicQspray
 Title: Multivariate Polynomials with Symbolic Parameters in their Coefficients
-Version: 1.0.0
+Version: 1.0.0.9000
 Authors@R: 
     person("Stéphane", "Laurent", , "laurent_step@outlook.fr", role = c("aut", "cre"))
 Description: Introduces the 'symbolicQspray' objects. Such an object
@@ -16,9 +16,10 @@ Description: Introduces the 'symbolicQspray' objects. Such an object
 License: GPL-3
 URL: https://github.com/stla/symbolicQspray
 BugReports: https://github.com/stla/symbolicQspray/issues
+Remotes: stla/qspray, stla/ratioOfQsprays
 Depends:
-    qspray (>= 3.0.0),
-    ratioOfQsprays
+    qspray (>= 3.0.0.9000),
+    ratioOfQsprays (>= 1.0.0.9000)
 Imports: 
     gmp,
     methods,
